# BOED_Identifiability

./: .gitignore  DELIVERABLES.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_GUIDE.md  INDEX.md  README.md  env.yml  pyproject.toml
causal_boed/: __init__.py  config.py  experiment.py
causal_boed/design/: __init__.py  eig.py  policy_greedy.py
causal_boed/eval/: __init__.py  metrics.py
causal_boed/graphs/: __init__.py  dag.py  interventions.py
causal_boed/identifiability/: __init__.py  query_stub.py  structural.py
causal_boed/inference/: __init__.py  mec_prescreen.py  posterior.py  score_bge.py
causal_boed/scripts/: __init__.py  consolidate_sweeps.py  plot_policy_comparison.py  run_all_sweeps.sh  run_sachs.py  run_synthetic.py
causal_boed/sem/: __init__.py  linear_gaussian.py  nonlinear_anm.py
causal_boed/utils/: __init__.py  logging.py  (+1 more)
configs/: ablation_dream4_small_policy_greedy.yaml  ablation_dream4_small_policy_random.yaml  ablation_linear_nobs_100.yaml  ablation_linear_nobs_200.yaml  ablation_linear_nobs_50.yaml  ablation_linear_noise_0_5.yaml  ablation_linear_noise_1_0.yaml  ablation_linear_noise_2_0.yaml  ablation_linear_nrounds_3.yaml  ablation_linear_nrounds_5.yaml  ablation_linear_nrounds_7.yaml  ablation_linear_policy_greedy.yaml  ablation_linear_policy_oracle.yaml  ablation_linear_policy_random.yaml  ablation_nonlinear_policy_greedy.yaml  ablation_nonlinear_policy_random.yaml  default_linear.yaml  default_nonlinear.yaml  dream4_small.yaml  sachs.yaml
tests/: conftest.py  test_bge_score.py  test_eig_policy.py  test_graphs.py  test_sem_sampling.py
