[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "causal-boed"
version = "0.1.0"
description = "Identifiability-aware Bayesian Optimal Experimental Design for finite-budget active causal discovery"
requires-python = ">=3.9"
authors = [
    {name = "Research Team", email = ""}
]
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "networkx>=3.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "typer>=0.9",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.9",
    "isort>=5.12",
    "mypy>=1.5",
    "ruff>=0.0.292",
]
bayesian = [
    "pyro-ppl>=1.8",
]
numpyro = [
    "numpyro>=0.13",
]

[project.scripts]
run-synthetic = "causal_boed.scripts.run_synthetic:main"
run-sachs = "causal_boed.scripts.run_sachs:main"

[tool.hatch.build.targets.wheel]
packages = ["causal_boed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=causal_boed --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ["py311"]
